tests_integration/__tests__/__snapshots__/syntax-error.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exits with non-zero code when input has a syntax error (stderr) 1`] = `
"stdin: SyntaxError: Unexpected token, expected ; (1:2)
> 1 | a.2
    |  ^
"
`;

exports[`exits with non-zero code when input has a syntax error (stdout) 1`] = `""`;

exports[`exits with non-zero code when input has a syntax error (write) 1`] = `Array []`;
